--- a/package.json
+++ b/package.json
@@ -1,41 +1,19 @@
 {
-  "name": "_s",
-  "version": "0.1.0",
-  "description": "_s starter theme",
-  "main": "Gruntfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/thinkxl/_s"
-  },
-  "keywords": [
-    "WordPress",
-    "Starter",
-    "Grunt",
-    "Underscores",
-    "sass"
-  ],
+  "name": "project",
+  "description": "project",
+  "version": "1.0.0",
+  "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-autoprefixer": "~1.0.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-sass": "^1.1.0",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-sass": "^2.1.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "jit-grunt": "^0.8.0",
-    "load-grunt-tasks": "~0.6.0",
-    "sassdoc": "^2.1.18",
-    "time-grunt": "~0.4.0"
-  },
-  "dependencies": {
-    "mappy-breakpoints": "^0.2.3"
+    "autoprefixer": "^6.5.3",
+    "bower": "=1.7.9",
+    "browser-sync": "^2.18.2",
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-path": "=3.0.3",
+    "gulp-postcss": "^6.2.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-webserver": "^0.9.1",
+    "postcss-assets": "^4.1.0"
   }
 }
