--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-webserver": "^0.9.1",
-    "postcss-assets": "^4.1.0"
+    "postcss-assets": "^4.1.0",
+    "gulp-notify": "^3.1.0"
   }
 }
